# nonlinear-systems

./: CMakeLists.txt  LICENSE  README.md  dynamic_system_simulator.kdev4  main.cpp
include/: CMakeLists.txt
include/numerical_integration/: numerical_integration.h
include/spline/: spline.h
